2014-06-20 Lyrics Grabber! 0.1
	* Project is public.
2014-06-26 Refactoring! 0.11
    * Cleaned up getting and storing lyrics in database
2014-06-27 Cleaned up UI 0.12
    * Renamed components of UI, increased opacity, and bound enter to button.